# gavhari

./: .gitignore  AGENTS.md  Cargo.toml  README.md
apps/web-api/: Cargo.toml
apps/web-api/src/: main.rs
apps/web-ui/: Cargo.toml  Trunk.toml  index.html  output.css
apps/web-ui/src/: main.rs
apps/worker-outbox/: Cargo.toml
apps/worker-outbox/src/: main.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/modules/audit/: Cargo.toml
crates/modules/audit/src/: lib.rs
crates/modules/auth/: Cargo.toml
crates/modules/finance/: Cargo.toml
crates/modules/inventory/: Cargo.toml
crates/modules/master-data/: Cargo.toml
crates/modules/organization/: Cargo.toml
crates/modules/purchasing/: Cargo.toml
crates/modules/sales/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docs/: APP_STRUCTURE.md  CRATE_STRUCTURE.md  INITIAL_ARCHITECTURE.md
