[workspace]
members = [
  "apps/web-api",
  "apps/web-ui",
  "apps/worker-outbox",
  "crates/shared",
  "crates/bus",
  "crates/infra",
  "crates/modules/auth",
  "crates/modules/organization",
  "crates/modules/master-data",
  "crates/modules/purchasing",
  "crates/modules/inventory",
  "crates/modules/sales",
  "crates/modules/finance",
  "crates/modules/audit",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4", "js"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
