[package]
name = "web-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
shared = { path = "../../crates/shared" }
bus = { path = "../../crates/bus" }
infra = { path = "../../crates/infra" }
actix-web = "4.12.1"
